# starter

./: .gitignore  .infisical.json  .prettierignore  Makefile  README.md  components.json  example.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.cjs  tailwind.config.ts  tsconfig.base.json  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml  codeql.yml  design-system-ci.yml
.storybook/: main.ts  preview.tsx
.turbo/specs/: portfolio-livekit-chat-polish.md
apps/agent/: .dockerignore  .env.example  Dockerfile  README.md  livekit.toml  package.json  pyproject.toml
apps/agent/scripts/: deploy-livekit-cloud.sh  smoke-livekit-dispatch.sh
apps/agent/src/: agent.py  agent_web_search.py  benchmark_search_providers.py  web_search.py  web_search_constants.py  web_search_providers.py
apps/agent/tests/: test_agent.py  test_agent_docs_env.py  test_agent_doctor_web_search.py  test_agent_web_search_tool.py  test_benchmark_cli.py  test_benchmark_search_providers.py  test_portfolio_agent_tool.py  test_rpc_search_tool_notifier.py  test_web_search_config.py  test_web_search_providers.py
apps/web/: .env.example  components.json  eslint.config.mjs  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vercel.json
docs/: design-token-lint-research.md  livekit-guest-sessions.md
scrapers/: Pipfile  README.md  coindesk_scraper.py  test_setup.py
scripts/: lint-ast.mjs  lint-design-system.mjs  lint-frontend-design-tokens.mjs  lint-style-tokens.mjs  test-voice-dev.sh  voice-dev.sh
src/: env.js
(+224 files in other folders)
