[project]
name = "starter-agent"
version = "0.1.0"
description = "Python LiveKit voice agent for the portfolio realtime test path."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "httpx>=0.28.1",
  "livekit-agents~=1.5",
  "python-dotenv>=1.2.1",
]

[tool.uv]
package = false
